[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.35.0",
    "aiosqlite>=0.19.0",
    "pydantic[email]>=2.0.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
]
